<resources>
    <string name="app_name">Imanicommunityapp</string>
    <string name="action_settings">Settings</string>
    <string name="maps_api_key">AIzaSyBTw7B1bINP2O3lUFw7ffkQkhRRZCvjAZo</string>
    <string name="underlined_text"><u>Sign Up</u></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="redeem_code_title">Redeem Code</string>
    <string name="redeem_code_subtitle">Enter a valid reward code to unlock points, campaign benefits, or promotional value on your account.</string>
    <string name="redeem_points_balance_label">AVAILABLE REWARD BALANCE</string>
    <string name="redeem_default_points">2,450</string>
    <string name="redeem_points_hint">Your reward balance updates automatically after successful redemptions.</string>
    <string name="redeem_code_field_title">Code Verification</string>
    <string name="redeem_code_field_hint">Use the exact code shared with you. Letters and numbers are accepted.</string>
    <string name="redeem_code_input_hint">Enter redeem code</string>
    <string name="redeem_code_action">Redeem Now</string>
    <string name="redeem_code_clear">Clear</string>
    <string name="redeem_code_default_status">Your redemption status will appear here.</string>
    <string name="redeem_info_title">Before you submit</string>
    <string name="redeem_info_body">Make sure the code has not expired and belongs to the current rewards campaign. The app will validate the code online before applying the reward to your account.</string>
    <string name="redeem_code_error_empty">Enter a redeem code to continue.</string>
    <string name="redeem_code_error_invalid">Redeem codes must contain exactly 8 letters or numbers.</string>
    <string name="redeem_code_helper_online">Enter an 8-character alphanumeric redeem code.</string>
    <string name="redeem_code_helper_offline">An internet connection is required before you can redeem a code.</string>
    <string name="redeem_code_offline_message">You are offline right now. Reconnect to the internet and try redeeming your code again later.</string>
    <string name="redeem_code_limited_message">Your network is connected but internet access is limited. Please try again once the connection is stable.</string>
    <string name="redeem_code_try_again_later">We cannot validate codes without internet access. Please try again later.</string>

    <!-- layout_top_panel (pre-existing layout refs) -->
    <string name="field_one_hint">Field one</string>
    <string name="field_two_hint">Field two</string>
    <string name="field_three_hint">Field three</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
