<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#DDDDDD"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/input_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_background"
            android:hint="@string/field_one_hint"
            android:padding="12dp" />

        <EditText
            android:id="@+id/edit_text_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/textbox_background"
            android:hint="@string/field_two_hint"
            android:padding="12dp" />

        <EditText
            android:id="@+id/edit_text_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/textbox_background"
            android:hint="@string/field_three_hint"
            android:padding="12dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
